--- a/vkvg.vcxproj
+++ b/vkvg.vcxproj
@@ -176,6 +176,11 @@
   <ItemGroup>
     <ClInclude Include="vkvg\include\vkvg.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="H:\Users\camilo\RedDotLogics\internal\port\graphics\freetype\freetype.vcxproj">
+      <Project>{78b079bd-9fc7-4b9e-b4a6-96da0f00248b}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
